[gd_scene load_steps=5 format=3 uid="uid://bhssekm7ehpj2"]

[ext_resource type="Script" uid="uid://bm6a3uuqhdd1d" path="res://prefabs/test/battle/all_move_anims_tester.gd" id="1_gbnfj"]
[ext_resource type="PackedScene" uid="uid://cjw6dl387qwra" path="res://prefabs/ui/inventory/move_learn_anim_controller.tscn" id="1_txnlc"]
[ext_resource type="PackedScene" uid="uid://dmc2ox37dega8" path="res://prefabs/audio/audio_handler.tscn" id="2_gbnfj"]
[ext_resource type="Resource" uid="uid://ta4xvquq2dev" path="res://gamedata/combatants/tree_bear/tree_bear.tres" id="2_oe7m0"]

[node name="AllMoveAnimsTester" type="Node2D"]
script = ExtResource("1_gbnfj")
targetCombatant = ExtResource("2_oe7m0")

[node name="MoveLearnAnimControl" parent="." instance=ExtResource("1_txnlc")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 1120.0
offset_bottom = 390.0
scale = Vector2(0.25, 0.25)
disableHpTags = false
playAnimAfterLoad = false
delayAnimAfterLoad = false
moveCombatantsIfAlone = false

[node name="BattleAnimationManager" parent="MoveLearnAnimControl/BattlefieldBorder" index="0"]
position = Vector2(640, 295)
scale = Vector2(4, 4)

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = false

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = false

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = false

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = false

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = false

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = false

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = false

[node name="BattlefieldShade" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager" index="8"]
offset_left = -160.0
offset_top = -74.0
offset_right = 160.0
offset_bottom = 46.0

[node name="PlayerSoloPos" parent="MoveLearnAnimControl" index="1"]
position = Vector2(513.001, 198)

[node name="PlayerMultiPos" parent="MoveLearnAnimControl" index="2"]
position = Vector2(511, 264)

[node name="Enemy1SoloPos" parent="MoveLearnAnimControl" index="3"]
position = Vector2(751, 195)

[node name="Enemy1MultiPos" parent="MoveLearnAnimControl" index="4"]
position = Vector2(751, 244)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AudioHandler" parent="." instance=ExtResource("2_gbnfj")]

[node name="MoveNameLabel" type="RichTextLabel" parent="."]
offset_left = -160.0
offset_top = 30.0
offset_right = 160.0
offset_bottom = 70.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]Move Name Goes Here[/center]
[center](Surge)[/center]"

[node name="StartButton" type="Button" parent="."]
offset_left = -31.0
offset_top = 60.0
offset_right = 32.0
offset_bottom = 89.0
text = "Start"

[connection signal="combatant_finished_anim" from="MoveLearnAnimControl" to="." method="_on_move_learn_anim_control_combatant_finished_anim"]
[connection signal="combatant_started_anim" from="MoveLearnAnimControl" to="." method="_on_move_learn_anim_control_combatant_started_anim"]

[editable path="MoveLearnAnimControl"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/HPTag/OrbDisplay"]
